force-app/main/default/objects/ExpectedDocument__c/ExpectedDocument__c.object-meta.xml
<CustomObject>
    <description>Référentiel des documents attendus selon différentes sources (Mode de financement, Source etc...)</description>
    <label>Document attendu</label>
    <nameField>
        <displayFormat>EDB-{0000}</displayFormat>
        <label>Référence</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Documents attendus</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>