force-app/main/default/objects/ExpectedDocument__c/fields/document__c.field-meta.xml
<CustomField>
    <fullName>document__c</fullName>
    <description>Document attendu</description>
    <label>Document</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>La valeur n&apos;existe pas ou ne correspond pas aux critères de filtre!</errorMessage>
        <filterItems>
            <field>Referencial__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Document attendu</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Referencial__c</referenceTo>
    <relationshipLabel>Documents attendus</relationshipLabel>
    <relationshipName>ExpectedDocuments</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>