force-app/main/default/objects/ExpectedDocument__c/fields/expectedBy__c.field-meta.xml
<CustomField>
    <fullName>expectedBy__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Permet de définir le document attendu par le référentiel</description>
    <label>Attendu par</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1 OR 2 OR 3</booleanFilter>
        <errorMessage>La valeur n&apos;existe pas ou ne correspond pas aux critères de filtre!</errorMessage>
        <filterItems>
            <field>Referencial__c.RecordType.DeveloperName</field>
            <operation>contains</operation>
            <value>FinancingMethod</value>
        </filterItems>
        <filterItems>
            <field>Referencial__c.RecordType.DeveloperName</field>
            <operation>contains</operation>
            <value>TermsAndConditions</value>
        </filterItems>
        <filterItems>
            <field>Referencial__c.RecordType.DeveloperName</field>
            <operation>contains</operation>
            <value>Source</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Referencial__c</referenceTo>
    <relationshipLabel>Documents attendus (Attendu par)</relationshipLabel>
    <relationshipName>ExpectedDocumentsBy</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>