force-app/main/default/objects/ExpectedDocument__c/fields/orderNonCompliance__c.field-meta.xml
<CustomField>
    <fullName>orderNonCompliance__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Fiche de non conformité commande qui sera automatiquement créée si le document attendu n&apos;est pas reçu</inlineHelpText>
    <label>Type de non-conformité commande</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>La valeur n&apos;existe pas ou ne correspond pas aux critères de filtre!</errorMessage>
        <filterItems>
            <field>Referencial__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Type de non-conformité commande</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Referencial__c</referenceTo>
    <relationshipLabel>Documents attendus (Non conformité commande)</relationshipLabel>
    <relationshipName>DocumentsAttendus</relationshipName>
    <type>Lookup</type>
</CustomField>