force-app/main/default/objects/ExpectedDocument__c/fields/type__c.field-meta.xml
<CustomField>
    <fullName>type__c</fullName>
    <formula>expectedBy__r.RecordType.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Type</label>
    <type>Text</type>
</CustomField>