force-app/main/default/objects/ExpectedDocument__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>document__c</columns>
    <columns>expectedBy__c</columns>
    <columns>type__c</columns>
    <filterScope>Everything</filterScope>
    <label>Tous</label>
</ListView>