force-app/main/default/objects/ExpectedDocument__c/listViews/Tout.listView-meta.xml
<ListView>
    <fullName>Tout</fullName>
    <columns>NAME</columns>
    <columns>expectedBy__c</columns>
    <columns>document__c</columns>
    <columns>orderNonCompliance__c</columns>
    <filterScope>Everything</filterScope>
    <label>Tout</label>
    <language>fr</language>
</ListView>